<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <EditText
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/name_editText"
        android:inputType="textCapWords"
        tools:ignore="Autofill" />
    <TextView
        android:id="@+id/toppings"
        android:layout_weight="1"
        style="@style/HeaderTextStyle"
        android:layout_margin="16dp"
        android:text="@string/toppings_textView" />

    <CheckBox
        android:id="@+id/whipped_cream_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:paddingStart="24dp"
        android:text="@string/whiped_cream_checkBox"
        tools:ignore="RtlSymmetry" />
    <CheckBox
        android:id="@+id/chocolate_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:paddingStart="24dp"
        android:text="@string/chocolate_checkBox"
        tools:ignore="RtlSymmetry" />


    <TextView
        android:id="@+id/quanity"
        android:layout_weight="1"
        style="@style/HeaderTextStyle"
        android:layout_margin="16dp"
        android:text="@string/quanity_textView" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginStart="16dp">

        <Button
            android:id="@+id/button_decrement"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:onClick="decrement"
            android:text="@string/button_decrement"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/numberOfCoffe"
            android:layout_weight="1"
            style="@style/HeaderTextStyle"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/number_off_coffe" />

        <Button
            android:id="@+id/button_increment"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:onClick="increment"
            android:text="@string/button_increment" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="16dp"
        android:onClick="submitOrder"
        android:text="@string/order_button" />

</LinearLayout>
</ScrollView>